[workspace]
cargo-features = ["edition2021"]

[package]
name = "tunnel-net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20"
mio = { version = "0.8", features = ["os-poll", "os-ext", "net"] }
default-net = "0.10.0"
libc = "0.2.125"
nix = "0.24.1"

[build-dependencies]
cc = "1.0.46"
